<resources>
    <string name="app_name" translatable="false">CarML</string>
    <string name="price_prediction_buttonCD">Price Prediction. Tap to begin predicting a price.
    </string>
    <string name="noCD" translatable="false"> </string>
    <string name="back_arrowCD">Tap to go back.</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="model">Model:</string>
    <string name="year">Year:</string>
    <string name="manufacturer_bullet">\u25CF Manufacturer:</string>
    <string name="model_bullet">\u25CF Model:</string>
    <string name="year_bullet">\u25CF Year:</string>
    <string name="engine_size">Engine Size (Litres):</string>
    <string name="fuel_type">\u25CF Fuel Type:</string>
    <string name="submitCD">Tap to submit and go to result.</string>
    <string name="price">\u25CF Price: €</string>
    <string name="horsepower">\u25CF Horsepower:</string>
    <string name="transmission">\u25CF Transmission:</string>
    <string name="drivetrain">\u25CF Drivetrain:</string>
    <string name="no_of_doors">\u25CF No. of Doors:</string>
    <string name="body_type">\u25CF Body Type:</string>
    <string name="engine">\u25CF Engine:</string>
    <string name="mileage">\u25CF Mileage:</string>
    <string name="unknown">Unknown</string>
    <string name="result_imageCD">An image of the car you entered</string>
    <string name="done_buttonCD">Done. Tap to return to the previous screen.</string>
    <string name="dropdownCD">Tap to expand dropdown menu.</string>
    <string name="server_unavailable">The server is currently unavailable. Please try again later.
    (Tap to dismiss)</string>
    <string name="please_wait">Please wait…</string>
    <string name="information_button_text">i</string>
    <string name="information_button_description">Use the dropdowns to enter details. When you are
    ready, tap the submit button to continue. (Tap to dismiss)</string>
    <string name="home_banner" translatable="false">CarML</string>
    <string name="price_prediction">Price Prediction</string>
    <string name="submit">Submit</string>
    <string name="result">Result</string>
    <string name="done">Done</string>
    <string name="fuel_information">Fuel Information</string>
    <string name="petrol">Petrol</string>
    <string name="diesel">Diesel</string>
    <string name="electric">Electric</string>
    <string name="x_axis_title">Price (€)</string>
    <string name="petrol_chart_title">Price of Petrol per Litre in cent (€) between 2001 and 2021</string>
    <string name="diesel_chart_title">Price of Diesel per Litre in cent (€) between 2001 and 2021</string>
    <string name="home_charger_heading">Home Charger Providers</string>
    <string name="easygo">EasyGo</string>
    <string name="ecar_infra">ECAR INFRA</string>
    <string name="ev_charging_ireland">EV Charging Ireland</string>
    <string name="wallbox">Wallbox</string>
    <string name="seai">Sustainable Energy Authority of Ireland</string>
    <string name="bord_gais_energy">Bord Gáis Energy</string>
    <string name="government_information">Government Information</string>
    <string name="donedeal_search">Search on DoneDeal</string>
    <string name="carzone_search">Search om Carzone</string>
    <string name="search_on">Search On:</string>
    <string name="information_buttonCD">Tap for help</string>
    <string name="fuel_information_buttonCD">Fuel Information. Tap for information on fuel types.</string>
</resources>