<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FuelInformationActivity"
    android:background="@drawable/tarmac_wallpaper"
    android:orientation="vertical">

    <!-- Main View -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main RelativeLayout -->
        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Layout for banner -->
            <RelativeLayout
                android:id="@+id/banner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fuel_information_banner"
                    style="@style/Banner"
                    android:text="@string/fuel_information"
                    android:contentDescription="@string/noCD"/>
            </RelativeLayout>

            <!-- Layout for back arrow -->
            <RelativeLayout
                android:id="@+id/arrow_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/banner_layout"
                android:layout_marginStart="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10">

                <ImageButton
                    android:id="@+id/back_arrow"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:background="@drawable/back_arrow"
                    android:contentDescription="@string/back_arrowCD"/>
            </RelativeLayout>

            <!-- Layout for Petrol Button -->
            <RelativeLayout
                android:id="@+id/petrol_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/banner_layout"
                android:layout_marginTop="100dp">

                <TextView
                    android:id="@+id/petrol_button"
                    style="@style/MenuButton"
                    android:text="@string/petrol"/>
            </RelativeLayout>

            <!-- Layout for Diesel Button -->
            <RelativeLayout
                android:id="@+id/diesel_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/petrol_layout"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/diesel_button"
                    style="@style/MenuButton"
                    android:text="@string/diesel"/>
            </RelativeLayout>

            <!-- Layout for Electric Button -->
            <RelativeLayout
                android:id="@+id/electric_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/diesel_layout"
                android:layout_marginTop="50dp">

                <TextView
                    android:id="@+id/electric_button"
                    style="@style/MenuButton"
                    android:text="@string/electric"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>