<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PetrolActivity"
    android:background="@drawable/tarmac_wallpaper"
    android:orientation="vertical">

    <!-- Main View -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main RelativeLayout -->
        <RelativeLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Layout for banner -->
            <RelativeLayout
                android:id="@+id/banner_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20">

                <TextView
                    android:id="@+id/electric_banner"
                    style="@style/Banner"
                    android:text="@string/electric"
                    android:contentDescription="@string/noCD"/>
            </RelativeLayout>

            <!-- Layout for back arrow -->
            <RelativeLayout
                android:id="@+id/arrow_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/banner_layout"
                android:layout_marginStart="@dimen/margin10"
                android:layout_marginTop="@dimen/margin10">

                <ImageButton
                    android:id="@+id/back_arrow"
                    android:layout_width="75dp"
                    android:layout_height="50dp"
                    android:background="@drawable/back_arrow"
                    android:contentDescription="@string/back_arrowCD"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/home_charger_heading"
                style="@style/HeaderText"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/arrow_layout"
                android:layout_marginTop="@dimen/margin20"
                android:layout_centerHorizontal="true"
                android:background="@drawable/electric_link_header"
                android:padding="@dimen/margin10"
                android:text="@string/home_charger_heading"/>

            <!-- EasyGo Link Layout-->
            <RelativeLayout
                android:id="@+id/easygo_layout"
                style="@style/ElectricLinkLayout"
                android:layout_below="@id/home_charger_heading">

                <ImageView
                    android:id="@+id/easygo_image"
                    style="@style/ElectricLinkImage"
                    android:background="@color/black"
                    android:src="@drawable/easygo_logo"
                    android:contentDescription="@string/noCD"/>

                <TextView
                    android:id="@+id/easygo_text"
                    style="@style/ElectricLinkText"
                    android:layout_toEndOf="@id/easygo_image"
                    android:text="@string/easygo"/>
            </RelativeLayout>

            <!-- Wallbox Link Layout-->
            <RelativeLayout
                android:id="@+id/wallbox_layout"
                style="@style/ElectricLinkLayout"
                android:layout_below="@id/easygo_layout">

                <ImageView
                    android:id="@+id/wallbox_image"
                    style="@style/ElectricLinkImage"
                    android:background="@color/white"
                    android:src="@drawable/wallbox_logo"
                    android:contentDescription="@string/noCD"/>

                <TextView
                    android:id="@+id/wallbox_text"
                    style="@style/ElectricLinkText"
                    android:layout_toEndOf="@id/wallbox_image"
                    android:text="@string/wallbox"/>
            </RelativeLayout>

            <!-- ECAR INFRA Link Layout-->
            <RelativeLayout
                android:id="@+id/ecar_infra_layout"
                style="@style/ElectricLinkLayout"
                android:layout_below="@id/wallbox_layout">

                <ImageView
                    android:id="@+id/ecar_infra_image"
                    style="@style/ElectricLinkImage"
                    android:background="@color/white"
                    android:src="@drawable/ecarinfra_logo"
                    android:contentDescription="@string/noCD"/>

                <TextView
                    android:id="@+id/ecar_infra_text"
                    style="@style/ElectricLinkText"
                    android:layout_toEndOf="@id/ecar_infra_image"
                    android:text="@string/ecar_infra"/>
            </RelativeLayout>

            <!-- EV Charging Ireland Link Layout-->
            <RelativeLayout
                android:id="@+id/ev_charging_ireland_layout"
                style="@style/ElectricLinkLayout"
                android:layout_below="@id/ecar_infra_layout">

                <ImageView
                    android:id="@+id/ev_charging_ireland_image"
                    style="@style/ElectricLinkImage"
                    android:background="@color/black"
                    android:src="@drawable/ev_charging_ireland_logo"
                    android:contentDescription="@string/noCD"/>

                <TextView
                    android:id="@+id/ev_charging_ireland_text"
                    style="@style/ElectricLinkText"
                    android:layout_toEndOf="@id/ev_charging_ireland_image"
                    android:text="@string/ev_charging_ireland"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/government_information_heading"
                style="@style/HeaderText"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ev_charging_ireland_layout"
                android:layout_marginTop="@dimen/margin20"
                android:layout_centerHorizontal="true"
                android:background="@drawable/electric_link_header"
                android:padding="@dimen/margin10"
                android:text="@string/government_information"/>

            <!-- Bord Gáis Energy Link Layout-->
            <RelativeLayout
                android:id="@+id/bord_gais_energy_layout"
                style="@style/ElectricLinkLayout"
                android:layout_below="@id/government_information_heading">

                <ImageView
                    android:id="@+id/bord_gais_energy_image"
                    style="@style/ElectricLinkImage"
                    android:background="@color/white"
                    android:src="@drawable/bord_gais_energy_logo"
                    android:contentDescription="@string/noCD"/>

                <TextView
                    android:id="@+id/bord_gais_energy_text"
                    style="@style/ElectricLinkText"
                    android:layout_toEndOf="@id/bord_gais_energy_image"
                    android:text="@string/bord_gais_energy"/>
            </RelativeLayout>

            <!-- SEAI Link Layout-->
            <RelativeLayout
                android:id="@+id/seai_layout"
                style="@style/ElectricLinkLayout"
                android:layout_below="@id/bord_gais_energy_layout">

                <ImageView
                    android:id="@+id/seai_image"
                    style="@style/ElectricLinkImage"
                    android:background="@color/white"
                    android:src="@drawable/seai_logo"
                    android:contentDescription="@string/noCD"/>

                <TextView
                    android:id="@+id/seai_text"
                    style="@style/ElectricLinkText"
                    android:layout_toEndOf="@id/seai_image"
                    android:text="@string/seai" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>