<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PricePredictionActivity"
    android:background="@drawable/tarmac_wallpaper"
    android:orientation="vertical">

    <!-- Layout for banner -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/banner_height"
            android:background="@drawable/result_banner"
            android:contentDescription="@string/noCD"/>
    </RelativeLayout>

    <!-- Layout for back arrow -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin10"
        android:layout_marginTop="@dimen/margin10">

        <ImageButton
            android:id="@+id/back_arrow"
            android:layout_width="75dp"
            android:layout_height="50dp"
            android:background="@drawable/back_arrow"
            android:contentDescription="@string/back_arrowCD"/>
    </RelativeLayout>

    <!-- Parent layout for the result -->
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Layout for the result -->
        <RelativeLayout
            android:id="@+id/result"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            android:background="@drawable/rectangle">

            <ImageView
                android:id="@+id/result_image"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin20"
                android:src="@drawable/car_wireframe" />

            <TextView
                android:id="@+id/manufacturer_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_image"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/manufacturer"/>

            <TextView
                android:id="@+id/result_manufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/manufacturer_label"
                android:layout_below="@id/result_image"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(manufacturer)" />

            <TextView
                android:id="@+id/model_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/manufacturer_label"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/model" />

            <TextView
                android:id="@+id/result_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/model_label"
                android:layout_below="@id/result_manufacturer"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(model)" />

            <TextView
                android:id="@+id/year_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/model_label"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/year" />

            <TextView
                android:id="@+id/result_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/year_label"
                android:layout_below="@id/result_model"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(year)" />

            <TextView
                android:id="@+id/fuel_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/year_label"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/fuel_type" />

            <TextView
                android:id="@+id/result_fuel_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/fuel_type_label"
                android:layout_below="@id/result_year"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(fuel type)" />

            <TextView
                android:id="@+id/horsepower_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_fuel_type"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/horsepower" />

            <TextView
                android:id="@+id/result_horsepower"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/horsepower_label"
                android:layout_below="@id/result_fuel_type"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(horsepower)" />

            <TextView
                android:id="@+id/transmission_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_horsepower"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/transmission" />

            <TextView
                android:id="@+id/result_transmission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/transmission_label"
                android:layout_below="@id/result_horsepower"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(transmission)" />

            <TextView
                android:id="@+id/drivetrain_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_transmission"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/drivetrain" />

            <TextView
                android:id="@+id/result_drivetrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/drivetrain_label"
                android:layout_below="@id/result_transmission"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(drive train)" />

            <TextView
                android:id="@+id/num_doors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_drivetrain"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/no_of_doors" />

            <TextView
                android:id="@+id/result_num_doors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/num_doors_label"
                android:layout_below="@id/result_drivetrain"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(no. of doors)" />

            <TextView
                android:id="@+id/body_type_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_num_doors"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/body_type" />

            <TextView
                android:id="@+id/result_body_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/body_type_label"
                android:layout_below="@id/result_num_doors"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(body type)" />

            <TextView
                android:id="@+id/price_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/result_body_type"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginTop="@dimen/margin10"
                android:text="@string/price" />

            <TextView
                android:id="@+id/result_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/price_label"
                android:layout_below="@id/result_body_type"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginTop="@dimen/margin10"
                android:text="(price)" />

            <ImageButton
                android:id="@+id/done_button"
                android:layout_width="150dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/price_label"
                android:layout_marginTop="@dimen/margin30"
                android:background="@drawable/done"/>
        </RelativeLayout>
    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>